--- a/README
+++ b/README
@@ -57,7 +57,7 @@ DESCRIPTION
     Set up a pool of connections to provide better parallelism:
 
         my $dbh = Database::Async->new(
-            uri  => 'postgres://write@maindb/dbname?sslmode=require',
+            uri  => 'postgresql://write@maindb/dbname?sslmode=require',
             pool => {
                 max => 4,
             },
